<resources>
    <string name="app_name">BAWP</string>
    <string name="action_settings">Settings</string>
    <string name="show_as_grid">Show as grid</string>
    <string name="show_as_list">Show as list</string>
    <string name="loginHint">Username</string>
    <string name="passHint">Password</string>
    <string name="loginButtonName">Login</string>
    <string name="createActText">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="createActButtonTitle">Create Account</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comments">Comments</string>

</resources>