<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.499" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="35dp"
            android:layout_gravity="center_vertical"
            >
            <EditText
                android:id="@+id/createActFirstName"
                android:hint="@string/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/createActLastName"
                android:hint="@string/lastName"
                android:layout_below="@+id/createActFirstName"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/createActUsername"
                android:hint="@string/loginHint"
                android:layout_below="@+id/createActLastName"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/createActPassword"
                android:inputType="textPassword"
                android:hint="@string/passHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createActUsername"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/createActButton"
                android:layout_below="@+id/createActPassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/createActButtonTitle"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>